Add signed desktop release update channel
